# spec-kit-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_STATUS.md  PUBLICATION.md  README.md  RELEASE_COMPLETE.md  TUTORIALS.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md  speckit.analyze
.claude/: settings.local.json
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: CONFIGURATION.md  SPECKIT_MCP_PLAN.md
examples/: README.md
examples/blog-api/: README.md
examples/todo-cli/: README.md
npm-package/: README.md  package.json
npm-package/lib/: download-binary.js
scripts/: test-mcp-check.sh  test-mcp-tools.sh  verify-installation.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  transport.rs  types.rs
src/speckit/: cli.rs  errors.rs  mod.rs
src/tools/: analyze.rs  check.rs  checklist.rs  clarify.rs  constitution.rs  implement.rs  init.rs  mod.rs  plan.rs  specify.rs  tasks.rs
src/utils/: mod.rs
